fix&refactor: horizontal scroll/header img pos.

--- a/blocks/header/__grid/header__grid.css
+++ b/blocks/header/__grid/header__grid.css
@@ -11,7 +11,8 @@
   min-height: 900px;
   max-width: 1440px;
   width: 100%;
-  padding: 20px 20px 0 24px;
+  padding: 20px 20px 0px 22px;
+  position: relative;
 }
 
 @media (max-width:1439px) {
