--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,4 @@
 .header {
   background-color: #E7E7E2;
   width: 100%;
-  position: relative;
 }
