--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,8 +5,6 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   align-items: center;
-  display: grid;
-  grid-template-columns: 1fr;
   font-family: 'Prompt', Arial, sans-serif;
   margin: 0 auto;
   min-height: 100vh;
